omni/tests/goldens/types/undefined_ident_16.omni
let result16:int = missing16
